--- a/README.adoc
+++ b/README.adoc
@@ -1,87 +1,74 @@
-# BlueSCSI
+# F4 BlueSCSI
 :toc: macro
 
-BlueSCSI & ArdSCSino are hardware that reproduces SCSI devices (hard disks) with an Arduino STM32F103C (aka Blue Pill.)
-
-`BlueSCSI` created by https://github.com/erichelgeson[erichelgeson] is a fork of `ArdSCSino-stm32` which adds:
-
-* Usability Improvements
-* Mac specific functionality
-* Enable/Disable Passive SCSI termination
-* An alternative power source if not able to be powered by the SCSI bus
-* Documentation
-* Open Hardware (KiCad & Grebers)
-
-`ArdSCSino-stm32` created by https://github.com/ztto/ArdSCSino-stm32[ztto] is the STM32 version of `ArdSCSino`
-
-`ArdSCSino` created by https://twitter.com/h_koma2[Tambo (TNB Seisakusho)]
-
-image::docs/buynow.png[link=https://scsi.blue, 150]
-image::docs/discordbanner.png[link=https://discord.gg/GKcvtgU7P9, 150]
-
-Join us in #bluescsi on https://discord.gg/GKcvtgU7P9[Discord] or open an issue on this repo.
+`F4 BlueSCSI`, ported by https://github.com/androda[androda], is a fork of `BlueSCSI` which targets the STM32F401 and STM32F411 microcontrollers.
 
 toc::[]
 
+### Lineage
+F4 BlueSCSI, BlueSCSI, and ArdSCSino are hardware that reproduces SCSI devices (hard disks) with an STM32 Microcontroller.
+
+`BlueSCSI` was created by https://github.com/erichelgeson[erichelgeson]
+
+`ArdSCSino-stm32` was created by https://github.com/ztto/ArdSCSino-stm32[ztto], and is the STM32 version of `ArdSCSino`
+
+`ArdSCSino` was created by https://twitter.com/h_koma2[Tambo (TNB Seisakusho)]
+
+
+## Discussion
+Join us in #bluescsi on https://discord.gg/GKcvtgU7P9[Discord] or open an issue on this repo.
+
+
 ## Compatibility
+If your computer is not listed below - it may be compatible but there is no guarantee it will work. This device is designed and tested to work with many different Macs, PowerPC included.  In terms of goals, the greatest compatibility possible is the long term ideal (Macs, PCs, DEC computers, etc).
 
-If your computer is not listed below - it may be compatible but there is no guarantee it will work. This device is designed and tested to work with pre-PowerPC Macs.
+### Tested Compatible
+(to be completed)
 
-### Compatible
+* LC II, LC III
 
-https://github.com/erichelgeson/BlueSCSI/wiki/Supported-Systems[Supported-Systems]
+* Mac IIci
+
+* Quadra 700
+
+* PowerMac 9600
+
+* Beige G3
+
 
 ## Performance
+(to be completed)
 
-https://github.com/erichelgeson/BlueSCSI/wiki/Performance[Performance]
 
 ## Assembly
-
-++++
-See <a href="docs/assembly.md">docs/assembly.md</a>
-++++
+(to be completed)
 
 ## Usage
+https://github.com/erichelgeson/BlueSCSI/wiki/Usage[Usage] is intended to be the same as the parent project and will be kept in sync until the blue pill module's flash is all used.  Then F4 will start to diverge.
 
-https://github.com/erichelgeson/BlueSCSI/wiki/Usage[Usage]
 
 ### Termination
+Termination enable / disable is handled differently per board style.  See the instructions for each PCB design.
 
-To enable termination place the two jumpers on the TERM block. Termination should be enabled if it is the last device in the SCSI chain, otherwise remove the jumpers if it is not.
 
 ## Troubleshooting
+(to be completed)
 
-https://github.com/erichelgeson/BlueSCSI/wiki/Troubleshooting
-
-### Older Version Specific Troubleshooting
-
-<<docs/troubleshooting-1.0-b.adoc,Version 1.0-b>>
 
 ## Hardware Versions
+(to be completed)
 
-### 1.1-a (in testing)
 
-* Other SCSI connection types
-* More silk screen art
+## Development (Advanced, annoying to set up)
+(to be completed)
 
-### 1.0-c (Latest)
-
-* Fixed issue with diode footprint being too small
-* Fixed issue with external power and `TERMPOWER`
-
-### 1.0-b
-
-First release
-
-## Development (Advanced)
-
-https://github.com/erichelgeson/BlueSCSI/wiki/Flashing[Flashing]
 
 ## Notes
 
-### Making Gerbers for JLCPCB
+### Building the Code
+- Build experience is unfortunately complex due to Maple's STM32F4 compatibility issues
 
+### Making Gerbers for JLCPCB
 https://support.jlcpcb.com/article/44-how-to-export-kicad-pcb-to-gerber-files
 
-
-BlueSCSI(TM) - Eric Helgeson - All rights reserved.
+BlueSCSI(TM) - Eric Helgeson - All rights reserved. - Used with permission
